// Vitest Snapshot v1

exports[`TourDialog > match the default snapshot 1`] = `
<div>
  <dialog-stub
    appendto="body"
    autozindex="true"
    basezindex="0"
    class="p-fluid"
    closable="true"
    closeicon="pi pi-times"
    closeonescape="true"
    dismissablemask="false"
    draggable="true"
    header="Product Details"
    keepinviewport="true"
    maximizable="false"
    maximizeicon="pi pi-window-maximize"
    minimizeicon="pi pi-window-minimize"
    minx="0"
    miny="0"
    modal="true"
    position="center"
    showheader="true"
    style="width: 450px;"
    visible="false"
  />
</div>
`;

exports[`TourDialog > should shows fileds correctly 1`] = `
<div>
  <dialog-stub
    appendto="body"
    autozindex="true"
    basezindex="0"
    class="p-fluid"
    closable="true"
    closeicon="pi pi-times"
    closeonescape="true"
    dismissablemask="false"
    draggable="true"
    header="Product Details"
    keepinviewport="true"
    maximizable="false"
    maximizeicon="pi pi-window-maximize"
    minimizeicon="pi pi-window-minimize"
    minx="0"
    miny="0"
    modal="true"
    position="center"
    showheader="true"
    style="width: 450px;"
    visible="true"
  />
</div>
`;
